# fremen_ws

./: .gitignore  output.txt
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/FremenServer/: FremenAction.h  FremenActionFeedback.h  FremenActionGoal.h  FremenActionResult.h  FremenFeedback.h  FremenGoal.h  FremenResult.h
devel/include/fremenserver/: FremenAction.h  FremenActionFeedback.h  FremenActionGoal.h  FremenActionResult.h  FremenFeedback.h  FremenGoal.h  FremenResult.h
devel/include/frongo/: AddCell.h  AddCellRequest.h  AddCellResponse.h  AddModel.h  AddModelRequest.h  AddModelResponse.h  AddOccupancyGrid.h  AddOccupancyGridRequest.h  AddOccupancyGridResponse.h  EvaluateModels.h  EvaluateModelsRequest.h  EvaluateModelsResponse.h  GetModelName.h  GetModelNameRequest.h  GetModelNameResponse.h  GraphModel.h  GraphModelRequest.h  GraphModelResponse.h  PredictStateOrder.h  PredictStateOrderRequest.h  PredictStateOrderResponse.h  SaveGrid.h  SaveGridRequest.h  SaveGridResponse.h  UploadGrid.h  UploadGridRequest.h  UploadGridResponse.h
devel/share/FremenServer/cmake/: FremenServer-msg-extras.cmake  FremenServer-msg-paths.cmake  FremenServerConfig.cmake
devel/share/common-lisp/ros/FremenServer/msg/: FremenAction.lisp  FremenActionFeedback.lisp  FremenActionGoal.lisp  FremenActionResult.lisp  FremenFeedback.lisp  FremenGoal.lisp  FremenResult.lisp  FremenServer-msg.asd  _package.lisp  _package_FremenAction.lisp  _package_FremenActionFeedback.lisp  _package_FremenActionGoal.lisp  _package_FremenActionResult.lisp  _package_FremenFeedback.lisp  _package_FremenGoal.lisp  _package_FremenResult.lisp
devel/share/common-lisp/ros/fremenserver/msg/: FremenAction.lisp  FremenActionFeedback.lisp  FremenActionGoal.lisp  FremenActionResult.lisp  FremenFeedback.lisp  FremenGoal.lisp  FremenResult.lisp  _package.lisp  _package_FremenAction.lisp  _package_FremenActionFeedback.lisp  _package_FremenActionGoal.lisp  _package_FremenActionResult.lisp  _package_FremenFeedback.lisp  _package_FremenGoal.lisp  _package_FremenResult.lisp  (+1 more)
devel/share/fremenserver/cmake/: fremenserver-msg-extras.cmake  fremenserver-msg-paths.cmake  fremenserverConfig.cmake
devel/share/fremenserver/msg/: FremenGoal.msg
devel/share/frongo/cmake/: frongo-msg-extras.cmake  frongo-msg-paths.cmake  frongoConfig.cmake
devel/share/roseus/ros/FremenServer/: manifest.l
devel/share/roseus/ros/fremenserver/: manifest.l
devel/share/roseus/ros/frongo/: manifest.l
devel/share/test_package/cmake/: test_packageConfig.cmake
src/: .gitignore  README.md
src/FremenServer/: CMakeLists.txt  package.xml
src/FremenServer/action/: Fremen.action
src/FremenServer/scripts/: fremen_client.py  k_fold_cross_validation.py
src/FremenServer/src/: CFrelement.cpp  CFrelement.h  CFrelementSet.cpp  CFrelementSet.h  fremenserver.cpp
src/frongo/: CMakeLists.txt  README.md  package.xml
src/frongo/occupancy_grids/Aruba/: cell_row_0_col_0.yaml  cell_row_0_col_1.yaml  cell_row_0_col_2.yaml  cell_row_0_col_3.yaml  cell_row_0_col_4.yaml  cell_row_0_col_5.yaml  cell_row_0_col_6.yaml  cell_row_0_col_7.yaml  cell_row_0_col_8.yaml  cell_row_0_col_9.yaml
src/frongo/occupancy_grids/Aruba_float/: cell_row_0_col_0.yaml  cell_row_0_col_1.yaml  cell_row_0_col_2.yaml  cell_row_0_col_3.yaml  cell_row_0_col_4.yaml  cell_row_0_col_5.yaml  cell_row_0_col_6.yaml  cell_row_0_col_7.yaml  cell_row_0_col_8.yaml  cell_row_0_col_9.yaml
src/frongo/scripts/: fremen_interface.py  fremeniser.py  graph_models.py  temporal_models.py
src/frongo/srv/: AddCell.srv  AddOccupancyGrid.srv  EvaluateModels.srv  GetModelName.srv  GraphModel.srv  PredictStateOrder.srv  UploadGrid.srv
(+66 files in other folders)
